2009-10-23  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss (mosh): REFER_GLOBAL works yay.

2009-10-20  higepon  <higepon@users.sourceforge.jp>

	* CompilerProcedures.h : Added obj->pointer for assembler.

2009-10-16  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss : NUMBER_SUB_PUSH works.

2009-10-14  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss Writing NUMBER_SUB_PUSH.

2009-10-12  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss RETURN works.

2009-10-11  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss (FRAME): FRAME instruction works.

2009-10-06  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss (BRANCH_NOT_LT): Works.

2009-10-02  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss (mosh): Added test for BRANCH_NOT_LT.

2009-09-30  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss : Added r8-r15 support for movq.

2009-09-29  higepon  <higepon@users.sourceforge.jp>

	* calling Object::isNumber works.

	* lib/mosh/jit/jit-impl.ss (assemble1): Added leave and push instruction.

2009-09-28  higepon  <higepon@users.sourceforge.jp>

	* CompilerProcedures.cpp (getClassMemberPointer): Added to get an address of Class member function.

2009-09-27  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss : Added label fixup function.
	                             Now only supportd je imm8 only.

2009-09-24  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss (u8-list->c-procedure+retq): Added. It addes (retq) instruction at tail of u8-list.

	* lib/mosh/jit/test.ss : Removed tests for VM instruction assembled results, since it is hard to maintainance.
	                         Instead, we test a behavior of jit compiled VM instruction.

2009-09-23  higepon  <higepon@users.sourceforge.jp>

	* ExecutableMemory.h : Added flush() function.

	* lib/mosh/jit/test.ss: REFER_LOCAL_PUSH_CONSTAT.
