@@ -236,26 +236,26 @@
     ;;   We don't test the assmebled code, but a behaviour of VM instruction.
 
     ;; CONSTANT instruction
-;;     (let* ([code (assemble (CONSTANT 13))]
-;;            [proc (u8*->c-procedure+retq code)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 3 (proc)))
+    (let* ([code (assemble (CONSTANT 13))]
+           [proc (u8*->c-procedure+retq code)])
+      (test-true (procedure? proc))
+      (test-eq 3 (proc)))
 
-    ;; REFER_LOCAL_PUSH_CONSTANT instruction
-;;     (let* ([code1 (assemble (REFER_LOCAL_PUSH_CONSTANT 0 13))]
-;;            [code2  (assemble (POP))]
-;;            [proc (u8*->c-procedure+retq (append code1 code2))])
-;;       (test-true (procedure? proc))
-;;       (test-eq 1234 (proc 1234)))
+    ;;  REFER_LOCAL_PUSH_CONSTANT instruction
+    (let* ([code1 (assemble (REFER_LOCAL_PUSH_CONSTANT 0 13))]
+           [code2  (assemble (POP))]
+           [proc (u8*->c-procedure+retq (append code1 code2))])
+      (test-true (procedure? proc))
+      (test-eq 1234 (proc 1234)))
 
-;;     (let* ([code1 (assemble (REFER_LOCAL_PUSH_CONSTANT 1 13))]
-;;            [code2  (assemble (POP))]
-;;            [proc (u8*->c-procedure+retq (append code1 code2))])
-;;       (test-true (procedure? proc))
-;;       (test-eq 1235 (proc 1234 1235)))
+    (let* ([code1 (assemble (REFER_LOCAL_PUSH_CONSTANT 1 13))]
+           [code2  (assemble (POP))]
+           [proc (u8*->c-procedure+retq (append code1 code2))])
+      (test-true (procedure? proc))
+      (test-eq 1235 (proc 1234 1235)))
 
     ;; BRANCH_NOT_LT
-#;    (let* ([label (gensym)]
+#;   (let* ([label (gensym)]
            [code1 (assemble (append (REFER_LOCAL_PUSH_CONSTANT 0 (vm-make-fixnum 1))
                                     (BRANCH_NOT_LT label)
                                     (CONSTANT (vm-make-fixnum 3))
@@ -266,174 +266,196 @@
       ;; ac_ is result of compare
       (test-eq #f (proc 2)))
 
-;;     ;; FRAME
-;;     (let* ([code1 (assemble
-;;                    (append
-;;                     (FRAME)
-;;                     (POP2)
-;;                     (POP2)
-;;                     (POP2)
-;;                     (POP2)
-;;                     (CONSTANT (vm-make-fixnum 3))))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 3 (proc)))
+    ;; FRAME
+    (let* ([code1 (assemble
+                   (append
+                    (FRAME)
+                    (POP2)
+                    (POP2)
+                    (POP2)
+                    (POP2)
+                    (CONSTANT (vm-make-fixnum 3))))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 3 (proc)))
 
-;;     ;; NUMBER_SUB_PUSH
-;;     (let* ([label (gensym)]
-;;            [code1 (assemble
-;;                    (append
-;;                     (CONSTANT (vm-make-fixnum 10))
-;;                     (PUSH)
-;;                     (CONSTANT (vm-make-fixnum 2))
-;;                     (NUMBER_SUB_PUSH)
-;;                     (POP)))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 8 (proc)))
+    ;; NUMBER_SUB_PUSH
+    (let* ([label (gensym)]
+           [code1 (assemble
+                   (append
+                    (CONSTANT (vm-make-fixnum 10))
+                    (PUSH)
+                    (CONSTANT (vm-make-fixnum 2))
+                    (NUMBER_SUB_PUSH)
+                    (POP)))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 8 (proc)))
 
-;;     ;; NUMBER_ADD
-;;     (let* ([label (gensym)]
-;;            [code1 (assemble
-;;                    (append
-;;                     (CONSTANT (vm-make-fixnum 10))
-;;                     (PUSH)
-;;                     (CONSTANT (vm-make-fixnum 2))
-;;                     (NUMBER_ADD)
-;;                     ))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 12 (proc)))
-
-
-;;     ;; REFER_GLOBAL
-;;     (let* ([code1 (assemble
-;;                    (append
-;;                     (REFER_GLOBAL 'zero?)
-;;                    (list `(movq rax ,(vm-register 'ac)))
-;;                     ))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq zero? (proc)))
+    ;; NUMBER_ADD
+    (let* ([label (gensym)]
+           [code1 (assemble
+                   (append
+                    (CONSTANT (vm-make-fixnum 10))
+                    (PUSH)
+                    (CONSTANT (vm-make-fixnum 2))
+                    (NUMBER_ADD)
+                    ))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 12 (proc)))
 
 
-;;     ;; RETURN
-;;     (let ([ERROR (gensym)])
-;;       (define (save-vm-registers)
-;;         `((movq rax ,(vm-register 'fp))
-;;           (push rax)
-;;           (movq rax ,(vm-register 'cl))
-;;           (push rax)
-;;           (movq rax ,(vm-register 'dc))
-;;           (push rax)
-;;           (movq rax ,(vm-register 'pc))
-;;           (push rax)))
-;;       (define (restore-vm-registers)
-;;         `((pop rax)
-;;           (movq ,(vm-register 'pc) rax)
-;;           (pop rax)
-;;           (movq ,(vm-register 'dc) rax)
-;;           (pop rax)
-;;           (movq ,(vm-register 'cl) rax)
-;;           (pop rax)
-;;           (movq ,(vm-register 'fp) rax)))
-;;     (let* ([code1 (assemble
-;;                    (append
-;;                     (save-vm-registers)
-;;                     ;; set test data to vm registers
-;;                     `((movq ,(vm-register 'fp) 1)
-;;                       (movq ,(vm-register 'cl) 2)
-;;                       (movq ,(vm-register 'dc) 3)
-;;                       (movq ,(vm-register 'pc) 4))
-;;                     (FRAME)
-;;                     ;; vm registers are dirty
-;;                     `((movq ,(vm-register 'fp) 5)
-;;                       (movq ,(vm-register 'cl) 6)
-;;                       (movq ,(vm-register 'dc) 7)
-;;                       (movq ,(vm-register 'pc) 8))
-;;                     `((movq rdx ,(vm-register 'sp))
-;;                       (movq rax ,(vm-make-fixnum 12)) ;; (push 12)
-;;                       (movq (& rdx) rax)
-;;                       (addq rdx 8)
-;;                       (movq ,(vm-register 'sp) rdx))
-;;                     (RETURN 1) ;; todo RETURN 1
-;;                     `(
-;;                       ;; check restored fp
-;;                       (movq rax ,(vm-register 'fp))
-;;                       (movq rcx 1)
-;;                       (cmpq rax rcx)
-;;                       (jne ,ERROR)
-;;                       ;; check restored cl
-;;                       (movq rax ,(vm-register 'cl))
-;;                       (movq rcx 2)
-;;                       (cmpq rax rcx)
-;;                       (jne ,ERROR)
-;;                       ;; check restored dc
-;;                       (movq rax ,(vm-register 'dc))
-;;                       (movq rcx 3)
-;;                       (cmpq rax rcx)
-;;                       (jne ,ERROR)
-;;                       ;; check restored pc
-;;                       (movq rax ,(vm-register 'pc))
-;;                       (movq rcx 4)
-;;                       (cmpq rax rcx)
-;;                       (jne ,ERROR)
-;;                       ,@(restore-vm-registers))
-;;                      (CONSTANT (vm-make-fixnum 10))
-;;                     `((retq)
-;;pp                       (label ,ERROR)
-;;                       ,@(restore-vm-registers)
-;;                       ,@(CONSTANT (vm-make-fixnum 11))
-;;                       (retq))))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 10 (proc))))
+    ;; REFER_GLOBAL
+    (let* ([code1 (assemble
+                   (append
+                    (REFER_GLOBAL 'zero?)
+                   (list `(movq rax ,(vm-register 'ac)))
+                    ))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq zero? (proc)))
 
-;;     ;; CALL
-;;     (let* ([code1 (assemble
-;;                    (append
-;;                     (FRAME)
-;;                     (CONSTANT (vm-make-fixnum 1))
-;;                     (PUSH)
-;;                     (REFER_LOCAL_PUSH_CONSTANT 0 (obj->integer +)) ;; we know + is cprocedure
-;;                     (CALL 2)
-;;                     ))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 1235 (proc 1234)))
 
-;;     ;; PUSH_FRAME
-;;     (let* ([code1 (assemble
-;;                    (append
-;;                     (PUSH_FRAME)
-;;                     (RETURN 0)
-;;                     (POP)
-;;                     (FRAME)
-;;                     (CONSTANT (vm-make-fixnum 1))
-;;                     (PUSH)
-;;                     (REFER_LOCAL_PUSH_CONSTANT 0 (obj->integer +)) ;; we know + is cprocedure
-;;                     (CALL 2)
-;;                     ))]
-;;            [proc (u8*->c-procedure+retq code1)])
-;;       (test-true (procedure? proc))
-;;       (test-eq 1235 (proc 1234)))
+    ;; RETURN
+    (let ([ERROR (gensym)])
+      (define (save-vm-registers)
+        `((movq rax ,(vm-register 'fp))
+          (push rax)
+          (movq rax ,(vm-register 'cl))
+          (push rax)
+          (movq rax ,(vm-register 'dc))
+          (push rax)
+          (movq rax ,(vm-register 'pc))
+          (push rax)))
+      (define (restore-vm-registers)
+        `((pop rax)
+          (movq ,(vm-register 'pc) rax)
+          (pop rax)
+          (movq ,(vm-register 'dc) rax)
+          (pop rax)
+          (movq ,(vm-register 'cl) rax)
+          (pop rax)
+          (movq ,(vm-register 'fp) rax)))
+    (let* ([code1 (assemble
+                   (append
+                    (save-vm-registers)
+                    ;; set test data to vm registers
+                    `((movq ,(vm-register 'fp) 1)
+                      (movq ,(vm-register 'cl) 2)
+                      (movq ,(vm-register 'dc) 3)
+                      (movq ,(vm-register 'pc) 4))
+                    (FRAME)
+                    ;; vm registers are dirty
+                    `((movq ,(vm-register 'fp) 5)
+                      (movq ,(vm-register 'cl) 6)
+                      (movq ,(vm-register 'dc) 7)
+                      (movq ,(vm-register 'pc) 8))
+                    `((movq rdx ,(vm-register 'sp))
+                      (movq rax ,(vm-make-fixnum 12)) ;; (push 12)
+                      (movq (& rdx) rax)
+                      (addq rdx 8)
+                      (movq ,(vm-register 'sp) rdx))
+                    (RETURN 1) ;; todo RETURN 1
+                    `(
+                      ;; check restored fp
+                      (movq rax ,(vm-register 'fp))
+                      (movq rcx 1)
+                      (cmpq rax rcx)
+                      (jne ,ERROR)
+                      ;; check restored cl
+                      (movq rax ,(vm-register 'cl))
+                      (movq rcx 2)
+                      (cmpq rax rcx)
+                      (jne ,ERROR)
+                      ;; check restored dc
+                      (movq rax ,(vm-register 'dc))
+                      (movq rcx 3)
+                      (cmpq rax rcx)
+                      (jne ,ERROR)
+                      ;; check restored pc
+                      (movq rax ,(vm-register 'pc))
+                      (movq rcx 4)
+                      (cmpq rax rcx)
+                      (jne ,ERROR)
+                      ,@(restore-vm-registers))
+                     (CONSTANT (vm-make-fixnum 10))
+                    `((retq)
+                       (label ,ERROR)
+                      ,@(restore-vm-registers)
+                      ,@(CONSTANT (vm-make-fixnum 11))
+                      (retq))))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 10 (proc))))
+
+    ;; CALL
+    (let* ([code1 (assemble
+                   (append
+                    (FRAME)
+                    (CONSTANT (vm-make-fixnum 1))
+                    (PUSH)
+                    (REFER_LOCAL_PUSH_CONSTANT 0 (obj->integer +)) ;; we know + is cprocedure
+                    (CALL 2)
+                    ))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 1235 (proc 1234)))
+
+    ;; PUSH_FRAME
+    (let* ([code1 (assemble
+                   (append
+                    (PUSH_FRAME)
+                    (RETURN 0)
+                    (POP)
+                    (FRAME)
+                    (CONSTANT (vm-make-fixnum 1))
+                    (PUSH)
+                    (REFER_LOCAL_PUSH_CONSTANT 0 (obj->integer +)) ;; we know + is cprocedure
+                    (CALL 2)
+                    ))]
+           [proc (u8*->c-procedure+retq code1)])
+      (test-true (procedure? proc))
+      (test-eq 1235 (proc 1234)))
 
     ;; todo
     ;; jump imm32
     ;; return に retq 足す
+    ;; branch_not_lt が動かない
+    ;; isObjectPointer 問題 on debug mode
     ;; stack trace
 
     ;; REFER_LOCAL_PUSH_CONSTANT instruction
+    (let ()
+      (define (save-vm-registers)
+        `((movq rax ,(vm-register 'fp))
+          (push rax)
+          (movq rax ,(vm-register 'cl))
+          (push rax)
+          (movq rax ,(vm-register 'dc))
+          (push rax)
+          (movq rax ,(vm-register 'pc))
+          (push rax)))
+      (define (restore-vm-registers)
+        `((pop rax)
+          (movq ,(vm-register 'pc) rax)
+          (pop rax)
+          (movq ,(vm-register 'dc) rax)
+          (pop rax)
+          (movq ,(vm-register 'cl) rax)
+          (pop rax)
+          (movq ,(vm-register 'fp) rax)))
+
     (let* ([code1 (let ([label (gensym)])
                     (assemble
                      (append
-                      (DEBUGGER 9997)
+;                      (DEBUGGER 9997)
                       (REFER_LOCAL_PUSH_CONSTANT 0 (vm-make-fixnum 2))
                       (BRANCH_NOT_LT label)
                       (CONSTANT (vm-make-fixnum 1))
                       (RETURN 1)
                       `((movq rax ,(vm-register 'ac)))
-                      (DEBUGGER 9998)
+;                      (DEBUGGER 9998)
                       `((retq))
                       `((label ,label))
                       (FRAME)
@@ -453,7 +475,7 @@
                       )))]
            [proc (u8*->c-procedure+retq code1)])
       (test-true (procedure? proc))
-      (test-eq 1234 (proc 1)))
+      (test-eq 1 (proc 1))))
 
 #;    (let* ([code1 (let ([branch-label (gensym)])
                   (assemble
