@@ -1,3 +1,9 @@
+2009-10-26  higepon  <higepon@users.sourceforge.jp>
+
+	* JIT-ted (fib 1) => 1 works.
+
+	* .gdbinit: Added for debugging JIT.
+
 2009-10-23  higepon  <higepon@users.sourceforge.jp>
 
 	* lib/mosh/jit/test.ss (mosh): REFER_GLOBAL works yay.
